@startuml main
left to right direction
skinparam linetype ortho

package "Enums" {
  enum RoomTypes {
      EDV
      CHEM
      PHY
      SPORT
      WORKSHOP
  }

  enum SchoolDays {
      MONDAY
      TUESDAY
      WEDNESDAY
      THURSDAY
      FRIDAY
      SATURDAY
  }
}

package "Data" {
  class Teacher {
      - teacherName : String
      - nameSymbol : String
      - takenPeriods : ArrayList<Period>
      - teachingSubject : ArrayList<Subject>

      + getTeacherName() : String
      + getNameSymbol() : String
      + getTakenPeriods() : ArrayList<Period>
      + getTeachingSubject() : ArrayList<Subject>

      + checkIfTeacherTeachesSubject(subject : Subject) : boolean
      + checkIfTeacherAvailableInPeriod(period : Period) : boolean
  }

  class Subject {
      - subjectName : String
      - requiredRoomType : RoomTypes[]
  }

  class Room {
      - roomNumber : short
      - roomName : String
      - roomPrefix : String
      - roomSuffix : String
      - roomTypes : RoomTypes[]
  }

  class Period {
      - schoolDay : SchoolDays
      - schoolHour : short
  }
}

package "ClassSubject" {
  class ClassSubject {
      - teacher : Teacher
      - subject : Subject 
      - weeklyHours : short
      - requiresDoublePeriod : boolean
      - isBetterDoublePeriod : boolean

      + assignClassRoomIfNoSpecialRoomType() : void
  }

  class ClassSubjectInstance {
      - classSubject : ClassSubject
      - room : Room
      - period : Period
      - teacher : Teacher
  }
}

package "TimeTable" {
    class Timetable {
        - timetable : ClassSubjectInstance[]
        - classSubjects : ArrayList<ClassSubject>
        - teachers : ArrayList<Teacher>
        
        + getTimetable() : ClassSubjectInstance[]
        + initializeArrayWithTotalWeeklyHours() : void
        + createRandomTimeTable() : void
    }

    class DataRepository {
        - classSubjects : ArrayList<ClassSubject>
        - teachers : ArrayList<Teacher>
        - rooms : ArrayList<Room>
        - {static} instance : DataRepository

        - DataRepository()
        + {static} getInstance: DataRepository
        + getClassSubjects() : ArrayList<ClassSubject>
        + getTeachers() : ArrayList<Teacher>
        + getRooms() : ArrayList<Room>

        + addTeacher(teacher: Teacher) : boolean
        + addRoom(room: Room) : Room
        + addClassSubject(classSubject: ClassSubject) : boolean
    }


    enum CSVType {
        TEACHER
        ROOM
        SUBJECT
    }

    class CSVManager {
        - dataRepository: DataRepository

        + processCSV(String): boolean
        + createTeacherFromCSV(String): void
        + createSubjectFromCSV(String): void
        + createTeacherFromCSV(String): void
        + getLinesFromCSV(String): String[]
    }
}

package algorithm {
    class SimulatedAnnealingAlgorithm {
        - currTimeTable : ClassSubjectInstance[]
        - nextTimeTable : ClassSubjectInstance[]
        - rooms : ArrayList<Room>
        - teachers : ArrayList<Teacher>
        - temperature : double

        + duplicateTimeTableIntoNextTimeTable() : void
        + acceptSolution(costCurrTimeTable: int, costNextTable: int, temperature: double) : boolean
        + pushTemperature(pushAmount: double) : void
        + swapPeriods(firstIndex: short, secondIndex: short) : boolean
        + changeRoom(classSubject: ClassSubjectInstance) : boolean
        + changeTeacher(classSubject: ClassSubjectInstance) : boolean
        + decreaseTemperature(temperature: double) : void
        + determineCost(timetable: ClassSubjectInstance[]) : int
    }
}


Teacher --> "takes" Period
Teacher --> "teaches" Subject

Subject --> "might require" RoomTypes

Room --> "has" RoomTypes

Period --> "at" SchoolDays

ClassSubject --> "references" Teacher
ClassSubject --> "references" Subject
ClassSubject --> "references" Room

ClassSubjectInstance --> "references"  ClassSubject
ClassSubjectInstance --> "references" Period

Timetable --> "gets Data from" DataRepository
CSVManager --> "parses Data into" DataRepository
CSVManager --> "Detects" CSVType

SimulatedAnnealingAlgorithm --> "gets Data from" DataRepository
SimulatedAnnealingAlgorithm --> "creates" Timetable

DataRepository --> "creates" Data



@enduml
